--- a/package.json
+++ b/package.json
@@ -1,105 +1,8 @@
 {
-  "name": "lunchdeliver",
+  "name": "takeawayhelper",
   "version": "1.0.0",
   "description": "",
   "main": "index.js",
-  "dependencies": {
-    "accepts": "^1.3.8",
-    "array-flatten": "^1.1.1",
-    "buffer-writer": "^2.0.0",
-    "body-parser": "^1.20.1",
-    "bytes": "^3.1.2",
-    "call-bind": "^1.0.2",
-    "colorette": "^2.0.19",
-    "commander": "^9.5.0",
-    "content-disposition": "^0.5.4",
-    "content-type": "^1.0.5",
-    "cookie": "^0.5.0",
-    "cookie-signature": "^1.0.6",
-    "depd": "^2.0.0",
-    "debug": "^4.3.4",
-    "destroy": "^1.2.0",
-    "dotenv": "^16.0.3",
-    "ee-first": "^1.1.1",
-    "encodeurl": "^1.0.2",
-    "escape-html": "^1.0.3",
-    "escalade": "^3.1.1",
-    "esm": "^3.2.25",
-    "etag": "^1.8.1",
-    "express": "^4.18.2",
-    "finalhandler": "^1.2.0",
-    "forwarded": "^0.2.0",
-    "fresh": "^0.5.2",
-    "function-bind": "^1.1.1",
-    "get-intrinsic": "^1.2.1",
-    "getopts": "^2.3.0",
-    "get-package-type": "^0.1.0",
-    "has": "^1.0.3",
-    "has-proto": "^1.0.1",
-    "has-symbols": "^1.0.3",
-    "http-errors": "^2.0.0",
-    "iconv-lite": "^0.4.24",
-    "inherits": "^2.0.4",
-    "ipaddr.js": "^1.9.1",
-    "interpret": "^2.2.0",
-    "is-core-module": "^2.12.1",
-    "knex": "^2.4.2",
-    "lodash": "^4.17.21",
-    "media-typer": "^0.3.0",
-    "merge-descriptors": "^1.0.1",
-    "methods": "^1.1.2",
-    "mime-db": "^1.52.0",
-    "mime": "^1.6.0",
-    "mime-types": "^2.1.35",
-    "ms": "^2.1.2",
-    "negotiator": "^0.6.3",
-    "object-inspect": "^1.12.3",
-    "on-finished": "^2.4.1",
-    "packet-reader": "^1.0.0",
-    "parseurl": "^1.3.3",
-    "path": "^0.12.7",
-    "path-to-regexp": "^0.1.7",
-    "path-parse": "^1.0.7",
-    "pg-cloudflare": "^1.1.0",
-    "pg": "^8.11.0",
-    "pg-connection-string": "^2.5.0",
-    "pg-int8": "^1.0.1",
-    "pg-pool": "^3.6.0",
-    "pg-protocol": "^1.6.0",
-    "pg-types": "^2.2.0",
-    "pgpass": "^1.0.5",
-    "postgres-array": "^2.0.0",
-    "postgres-bytea": "^1.0.0",
-    "postgres-date": "^1.0.7",
-    "postgres-interval": "^1.2.0",
-    "process": "^0.11.10",
-    "proxy-addr": "^2.0.7",
-    "range-parser": "^1.2.1",
-    "qs": "^6.11.0",
-    "raw-body": "^2.5.1",
-    "rechoir": "^0.8.0",
-    "resolve": "^1.22.2",
-    "resolve-from": "^5.0.0",
-    "safe-buffer": "^5.2.1",
-    "safer-buffer": "^2.1.2",
-    "send": "^0.18.0",
-    "serve-static": "^1.15.0",
-    "setprototypeof": "^1.2.0",
-    "side-channel": "^1.0.4",
-    "split2": "^4.2.0",
-    "statuses": "^2.0.1",
-    "supports-preserve-symlinks-flag": "^1.0.0",
-    "tarn": "^3.0.2",
-    "tildify": "^2.0.0",
-    "toidentifier": "^1.0.1",
-    "type-is": "^1.6.18",
-    "unpipe": "^1.0.0",
-    "util": "^0.10.4",
-    "utils-merge": "^1.0.1",
-    "vary": "^1.1.2",
-    "xtend": "^4.0.2"
-  },
-  "devDependencies": {},
   "scripts": {
     "test": "echo \"Error: no test specified\" && exit 1"
   },
@@ -112,5 +15,10 @@
   "bugs": {
     "url": "https://github.com/shingkinhei/takawayhelper/issues"
   },
-  "homepage": "https://github.com/shingkinhei/takawayhelper#readme"
+  "homepage": "https://github.com/shingkinhei/takawayhelper#readme",
+  "dependencies": {
+    "knex": "^2.4.2",
+    "node-telegram-bot-api": "^0.61.0",
+    "pg": "^8.11.0"
+  }
 }
